# rs-cpp-ffi-template

./: CMakeLists.txt  Cargo.toml  README.md  build.rs
cli/: CMakeLists.txt  main.cpp
doc/: cxx-build-flow.drawio
include/deep_thought/: deep_thought.h
shim/: CMakeLists.txt
shim/include/deep_thought/: IBootLoader.h  deep_thought.h
shim/src/: deep_thought.cpp
src/: bindings.rs  lib.rs
src/cpp/: deep_thought.cpp
