[package]
name = "rs-cpp-ffi-template"
version = "0.1.0"
edition = "2021"
# needed to add include directories in build.rs
links = "rs-cpp-ffi-template"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
cxx = "1.0.94"

[build-dependencies]
cxx-build =  "1.0"
cc = "1.0.79"

[features]
default = []
build_shim = []